--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <li><a href="#" class="active" style="color: var(--secondary);"> HOME </a></li>
                         <li><a href="about.html" target="_blank"> ABOUT </a></li>
                         <li><a href="services.html" target="_blank"> SERVICES </a></li>
-                        <li><a href="Blog/blog.html" target="_blank"> BLOG </a></li>
+                        <li><a href="Blog/blogpage.php" target="_blank"> BLOG </a></li>
                         <li><a href="#testimonials"> REPUTATION </a></li>
                         <li><a href="#newsletter"> SUBSCRIBE </a></li>
                         <li style="border: 0;"><a href="#contact"> CONTACT </a></li>
@@ -352,7 +352,7 @@
                         <p><a href="#"> Home</a></p>
                         <p><a href="about.html"> About</a></p>
                         <p><a href="services.html"> Services</a></p>
-                        <p><a href="Blog/blog.html"> Blog</a></p>
+                        <p><a href="Blog/blogpage.php"> Blog</a></p>
                     </div>
                 </div>
 
