--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
                 <div class="tab tab2">
                     <p><span style="color: #797979;">Call us now</span></p>
                     <br />
-                    <p><span style="font-size: 2.1rem; color: var(--dark); font-weight: bold; margin: 40px 0px;">024-224-4518 / 027-970-8344</span></p>
+                    <p><span style="font-size: 2.1rem; color: var(--dark); font-weight: bold; margin: 40px 0px;">024-224-4518</span></p>
 
                     <br />
                     <br />
