--- a/about.html
+++ b/about.html
@@ -147,7 +147,7 @@
                 <div class="tab tab2">
                     <p><span style="color: #797979;">Call us now</span></p>
                     <br />
-                    <p><span style="font-size: 2.1rem; color: var(--dark); font-weight: bold; margin: 40px 0px;">024-224-4518 / 027-970-8344</span></p>
+                    <p><span style="font-size: 2.1rem; color: var(--dark); font-weight: bold; margin: 40px 0px;">024-224-4518</span></p>
 
                     <br />
                     <br />
@@ -177,7 +177,7 @@
                         <p><a href="#"> Home</a></p>
                         <p><a href="about.html"> About</a></p>
                         <p><a href="services.html"> Services</a></p>
-                        <p><a href="Blog/blog.html"> Blog</a></p>
+                        <p><a href="Blog/blogpage.php"> Blog</a></p>
                     </div>
                 </div>
 
