Added google maps

--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                 Contact Us
             </div>
 
-            <div class="contact grid">
+            <div class="contact grid" style="z-index: 100;">
                 <div class="tab tab1">
                     <div class="header">
                         Achievers Investment Limited
@@ -315,14 +315,16 @@
                     </div>
 
                     <div class="email">
-                        <span style="font-weight: bold; color: var(--dark);">Email:</span> &nbsp <span style="color: #797979;">mrowusuagyei@outlook.com / agyei@ignisgroup.com / info@achieversafrica.com</span>
+                        <span style="font-weight: bold; color: var(--dark);">Email:</span> &nbsp <span style="color: #797979;">mrowusuagyei@outlook.com / agyei@ignisgroup.com /
+                            info@achieversafrica.com</span>
                     </div>
                 </div>
 
                 <div class="tab tab2">
                     <p><span style="color: #797979;">Call us now</span></p>
                     <br />
-                    <p><span style="font-size: 2.1rem; color: var(--dark); font-weight: bold; margin: 40px 0px;">024-224-4518</span></p>
+                    <p><span style="font-size: 2.1rem; color: var(--dark); font-weight: bold; margin: 40px 0px;">024-224-4518</span>
+                    </p>
 
                     <br />
                     <br />
@@ -337,6 +339,15 @@
                     <p><span style="color: var(--dark); font-size: 1rem;"> Tema, Greater Accra Region</span></p>
                 </div>
             </div>
+
+            <div id="map-div">
+                <div>
+                    <iframe width="100%" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=Tema%2C%20Community%2017%2C%20Ashaiman%20Lashibi%20Road%2C%20Tema%2C%20Ghana&t=&z=17&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+                    <a href="https://www.embedgooglemap.net/text-tools/remove-spaces/"></a>
+                </div>
+
+            </div>
+
 
             <div class="content grid">
                 <div class="tab tab1">
@@ -359,7 +370,8 @@
                 <div class="tab tab3">
                     <p><span style="color: #797979;">Call us 24/7</span></p>
                     <br />
-                    <p><span style="font-size: 2.1rem; color: var(--dark); font-weight: bold; margin: 20px 0px;">024-224-4518</span></p>
+                    <p><span style="font-size: 2.1rem; color: var(--dark); font-weight: bold; margin: 20px 0px;">024-224-4518</span>
+                    </p>
                 </div>
             </div>
 
