--- a/about.html
+++ b/about.html
@@ -163,6 +163,14 @@
                 </div>
             </div>
 
+            <div id="map-div">
+                <div>
+                    <iframe width="100%" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=Tema%2C%20Community%2017%2C%20Ashaiman%20Lashibi%20Road%2C%20Tema%2C%20Ghana&t=&z=17&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+                    <a href="https://www.embedgooglemap.net/text-tools/remove-spaces/"></a>
+                </div>
+
+            </div>
+
             <div class="content grid">
                 <div class="tab tab1">
                     <div class="image">
