Replacing all files

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
         <!-- Callout -->
         <div class="callout full-width">
             <div class="email float-left">
-                <i class="fa fa-envelope"></i> www.email.com
+                <i class="fa fa-envelope"></i> info@achieversafrica.com
             </div>
 
             <div class="phone float-left">
-                <i class="fa fa-mobile"></i> 0201144293
+                <i class="fa fa-mobile"></i> 024-224-4518
             </div>
 
             <div class="social float-right">
@@ -53,8 +53,8 @@
                         <li><a href="about.html" target="_blank"> ABOUT </a></li>
                         <li><a href="services.html" target="_blank"> SERVICES </a></li>
                         <li><a href="Blog/blogpage.php" target="_blank"> BLOG </a></li>
-                        <li><a href="#testimonials"> REPUTATION </a></li>
-                        <li><a href="#newsletter"> SUBSCRIBE </a></li>
+                       <!-- <li><a href="#testimonials"> REPUTATION </a></li>
+                        <li><a href="#newsletter"> SUBSCRIBE </a></li>-->
                         <li style="border: 0;"><a href="#contact"> CONTACT </a></li>
 
                     </ul>
@@ -202,31 +202,8 @@
         </div>
         <!-- End of Services -->
 
-        <!-- Blog -->
-        <div class="blog full-width" id="blog">
-            <div class="header">
-                BLOG
-            </div>
-            <div style="background-color: var(--secondary); width: 50px; height: 2.5px; margin: 40px auto;"></div>
-
-            <div class="content">
-                <div class="tabs tab1">
-
-                </div>
-
-                <div class="tabs tab2">
-
-                </div>
-
-                <div class="tabs tab3">
-
-                </div>
-            </div>
-        </div>
-        <!-- End of Blog -->
-
         <!--Testimonials-->
-        <div class="testimonials full-width flex flex-center" id="testimonials">
+     <!--   <div class="testimonials full-width flex flex-center" id="testimonials">
             <div class="content">
                 <div class="header">
                     TESTIMONIALS
@@ -276,26 +253,9 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div>-->
 
         <!--End of testimonials-->
-
-        <!-- Newsletter -->
-        <div class="newsletter full-width flex flex-center" id="newsletter">
-            <div class="header">
-                SUBSCRIBE
-                <p style="font-size: 1rem; font-weight: normal;"> Stay informed. Join our newsletter to know what we are up to. </p>
-            </div>
-
-            <div class="content">
-                <form>
-                    <input type="text" placeholder="Name" />
-                    <input type="email" placeholder="Email" />
-                    <input type="submit" value="Subscribe" />
-                </form>
-            </div>
-        </div>
-        <!-- End of Newsletter -->
 
         <!-- Footer -->
         <div class="footer full-width" id="contact">
@@ -353,7 +313,7 @@
                 <div class="tab tab1">
                     <div class="image">
                         <img src="IMG/logo.png" style="max-width: 150px; height: 100px;" />
-                        <p style="color: rgb(85, 85, 85); line-height: 1.6;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni cumque quas unde deserunt, facilis doloremque placeat dolores provident? Molestiae ut.</p>
+                      <!--  <p style="color: rgb(85, 85, 85); line-height: 1.6;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni cumque quas unde deserunt, facilis doloremque placeat dolores provident? Molestiae ut.</p>-->
                     </div>
                 </div>
 
