--- a/home.html
+++ b/home.html
@@ -125,6 +125,43 @@
             </div>
         </div>
         <!--End of about-->
+
+        <!--Our industries-->
+        <div class="industries full-width">
+            <div class="header full-width">
+                OUR INDUSTRIES
+            </div>
+            <div class="line"></div>
+            <div class="content grid grid-default">
+                <div class="tab tab1">
+                    <div class="content">
+                        <div class="icon flex flex-center">
+                            A
+                        </div>
+
+                        <div class="header full-width">
+                            Heading
+                        </div>
+
+                        <div class="caption full-width">
+                            Caption
+                        </div>
+                    </div>
+                </div>
+
+                <div class="tab tab2">
+
+                </div>
+
+                <div class="tab tab3">
+
+                </div>
+
+                <div class="tab tab4">
+
+                </div>
+            </div>
+        </div>
     </div>
     <!--End of wrapper-->
 </body>
