--- a/home.html
+++ b/home.html
@@ -132,7 +132,7 @@
                 OUR INDUSTRIES
             </div>
             <div class="line"></div>
-            <div class="content grid grid-default">
+            <div class="content grid grid-preset">
                 <div class="tab tab1">
                     <div class="content">
                         <div class="icon flex flex-center">
@@ -150,18 +150,221 @@
                 </div>
 
                 <div class="tab tab2">
+                    <div class="content">
+                        <div class="icon flex flex-center">
+                            A
+                        </div>
 
+                        <div class="header full-width">
+                            Heading
+                        </div>
+
+                        <div class="caption full-width">
+                            Caption
+                        </div>
+                    </div>
                 </div>
 
                 <div class="tab tab3">
+                    <div class="content">
+                        <div class="icon flex flex-center">
+                            A
+                        </div>
 
+                        <div class="header full-width">
+                            Heading
+                        </div>
+
+                        <div class="caption full-width">
+                            Caption
+                        </div>
+                    </div>
                 </div>
 
                 <div class="tab tab4">
+                    <div class="content">
+                        <div class="icon flex flex-center">
+                            A
+                        </div>
 
+                        <div class="header full-width">
+                            Heading
+                        </div>
+
+                        <div class="caption full-width">
+                            Caption
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
+        <!--End of Industries-->
+
+        <!--Services-->
+        <div class="services full-width">
+            <div class="header full-width">
+                OUR SERVICES
+            </div>
+            <div class="line"></div>
+
+            <div class="content grid grid-preset full-width">
+                <div class="tab flex flex-center tab1">
+                    <div class="icon flex flex-center">
+                        B
+                    </div>
+
+                    <div class="caption">
+                        <div class="header">
+                            Heading
+                        </div>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos molestiae quisquam beatae.
+                    </div>
+                </div>
+
+                <div class="tab flex flex-center tab1">
+                    <div class="icon flex flex-center">
+                        B
+                    </div>
+
+                    <div class="caption">
+                        <div class="header">
+                            Heading
+                        </div>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos molestiae quisquam beatae.
+                    </div>
+                </div>
+
+                <div class="tab flex flex-center tab1">
+                    <div class="icon flex flex-center">
+                        B
+                    </div>
+
+                    <div class="caption">
+                        <div class="header">
+                            Heading
+                        </div>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos molestiae quisquam beatae.
+                    </div>
+                </div>
+
+                <div class="tab flex flex-center tab1">
+                    <div class="icon flex flex-center">
+                        B
+                    </div>
+
+                    <div class="caption">
+                        <div class="header">
+                            Heading
+                        </div>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos molestiae quisquam beatae.
+                    </div>
+                </div>
+
+                <div class="tab flex flex-center tab1">
+                    <div class="icon flex flex-center">
+                        B
+                    </div>
+
+                    <div class="caption">
+                        <div class="header">
+                            Heading
+                        </div>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos molestiae quisquam beatae.
+                    </div>
+                </div>
+
+                <div class="tab flex flex-center tab1">
+                    <div class="icon flex flex-center">
+                        B
+                    </div>
+
+                    <div class="caption">
+                        <div class="header">
+                            Heading
+                        </div>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos molestiae quisquam beatae.
+                    </div>
+                </div>
+
+                <div class="tab flex flex-center tab1">
+                    <div class="icon flex flex-center">
+                        B
+                    </div>
+
+                    <div class="caption">
+                        <div class="header">
+                            Heading
+                        </div>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos molestiae quisquam beatae.
+                    </div>
+                </div>
+
+                <div class="tab flex flex-center tab1">
+                    <div class="icon flex flex-center">
+                        B
+                    </div>
+
+                    <div class="caption">
+                        <div class="header">
+                            Heading
+                        </div>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos molestiae quisquam beatae.
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--End of services-->
+
+        <!--Staff-->
+        <div class="staff full-width">
+            <div class="header full-width header-preset">
+                OUR SERVICES
+            </div>
+            <div class="line"></div>
+
+            <div class="content grid grid-preset">
+                <div class="tab tab1">
+                    <div class="image full-width">
+                        Image
+                    </div>
+
+                    <div class="badge full-width">
+                        Badge
+                    </div>
+                </div>
+
+                <div class="tab tab2">
+                    <div class="image full-width">
+                        Image
+                    </div>
+
+                    <div class="badge full-width flex flex-center">
+                        Badge
+                    </div>
+                </div>
+
+                <div class="tab tab3">
+                    <div class="image full-width">
+                        Image
+                    </div>
+
+                    <div class="badge full-width flex flex-center">
+                        Badge
+                    </div>
+                </div>
+
+                <div class="tab tab4">
+                    <div class="image full-width">
+                        Image
+                    </div>
+
+                    <div class="badge full-width flex flex-center">
+                        Badge
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--End of staff-->
     </div>
     <!--End of wrapper-->
 </body>
