--- a/home.html
+++ b/home.html
@@ -140,11 +140,11 @@
                         </div>
 
                         <div class="header full-width">
-                            Heading
+                            Agriculture
                         </div>
 
                         <div class="caption full-width">
-                            Caption
+                            Achievers Investments seeks to engage the younger generation in the business of agriculture.
                         </div>
                     </div>
                 </div>
@@ -156,11 +156,11 @@
                         </div>
 
                         <div class="header full-width">
-                            Heading
+                            Import
                         </div>
 
                         <div class="caption full-width">
-                            Caption
+                            Importation of Agro-chemicals, Tractors, Farm implements, Agric PPEs, Rice, Oil, Sugar and Flour.
                         </div>
                     </div>
                 </div>
@@ -172,11 +172,11 @@
                         </div>
 
                         <div class="header full-width">
-                            Heading
+                            Export
                         </div>
 
                         <div class="caption full-width">
-                            Caption
+                            The export of traditional and non-traditional export products Traditional: Pineapples, <a href="#" style="color: yellow; text-decoration: underline;">Read more</a>
                         </div>
                     </div>
                 </div>
@@ -188,11 +188,11 @@
                         </div>
 
                         <div class="header full-width">
-                            Heading
+                            Training
                         </div>
 
                         <div class="caption full-width">
-                            Caption
+                            Customer service training, Heavy duty machine operation training, Construction training, <a href="#" style="color: yellow; text-decoration: underline;">Read more</a>
                         </div>
                     </div>
                 </div>
@@ -318,7 +318,7 @@
         <!--Staff-->
         <div class="staff full-width">
             <div class="header full-width header-preset">
-                OUR SERVICES
+                OUR STAFF
             </div>
             <div class="line"></div>
 
@@ -328,7 +328,7 @@
                         Image
                     </div>
 
-                    <div class="badge full-width">
+                    <div class="badge full-width flex flex-center">
                         Badge
                     </div>
                 </div>
@@ -365,6 +365,82 @@
             </div>
         </div>
         <!--End of staff-->
+
+        <!--Partners-->
+        <div class="partners full-width">
+            <div class="content grid grid-preset full-width">
+                <div class="tab tab1 flex flex-center">
+                    Partner
+                </div>
+
+                <div class="tab tab2 flex flex-center">
+                    Partner
+                </div>
+
+                <div class="tab tab3 flex flex-center">
+                    Partner
+                </div>
+
+                <div class="tab tab4 flex flex-center">
+                    Partner
+                </div>
+
+                <div class="tab tab5 flex flex-center">
+                    Partner
+                </div>
+            </div>
+        </div>
+        <!--End of partners-->
+
+        <!--footer-->
+        <div class="footer full-width background-preset">
+            <div class="content grid grid-preset">
+                <div class="tab tab1">
+                    <div class="header full-width">
+                        Achievers Investment and Management LTD
+                    </div>
+
+                    <div class="address">
+                        <p>
+                            House Number 20, Batsona Central,
+                            <br /> Off Spintex Road. Comm. 17, Tema
+                        </p>
+                        <br />
+                        <p> Email: mrowusuagyei@outlook.com / agyei@ignisgroup.com / info@achieversafrica.com</p>
+                    </div>
+
+                    <div class="call full-width">
+                        <p>Call us now </p>
+                        <p>024-224-4518</p>
+                        <br />
+                        <p>Working Hours</p>
+                        <p>Monday-Friday: 8:30am - 7:30pm</p>
+                    </div>
+                </div>
+
+                <div class="tab tab2">
+                    <div class="header full-width">
+                        Pages
+                    </div>
+
+                    <div class="links">
+                        <ul>
+                            <li><a href="#">Home</a></li>
+                            <li><a href="#">About</a></li>
+                            <li><a href="#">Services</a></li>
+                            <li> <a href="#">Blog</a></li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="tab tab3">
+                    <div class="header full-width">
+                        Newsletter
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--End of footer-->
     </div>
     <!--End of wrapper-->
 </body>
