--- a/about.html
+++ b/about.html
@@ -26,8 +26,8 @@
 
             <div class="navbar">
                 <a href="index.html">Home</a>
-                <a href="#" class="active">About The Company</a>
-                <a href="services.html">Servcices</a>
+                <a href="#" class="active">About Us </a>
+                <a href="services.html">Services</a>
             </div>
         </div>
         <!--End of top-->
