--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             </div>
 
             <div class="cards">
-                <div class="card card1">
+                <div class="card card1" style="border-top: 0;">
                     <div class="content">
                         <div class="icon flex flex-center">
                             <i class="fa fa-users"></i>
@@ -120,7 +120,7 @@
 
                 <div class="card card2 background-presets">
                     <div class="content">
-                        <div class="icon flex flex-center" style="border: 2px solid white;">
+                        <div class="icon flex flex-center">
                             <i class="fa fa-users"></i>
                         </div>
 
@@ -171,7 +171,7 @@
                         </div>
 
                         <div class="caption full-width">
-                            Achievers Investments seeks to engage the younger generation in the business of agriculture. <a href="services.html" style="color: yellow; text-decoration: underline;">Read more</a>
+                            Achievers Investments seeks to engage the younger generation in the business of agriculture. <a href="services.html" style="color: blue; text-decoration: underline;">Read more</a>
                         </div>
                     </div>
                 </div>
@@ -187,7 +187,7 @@
                         </div>
 
                         <div class="caption full-width">
-                            Importation of Agro-chemicals, Tractors, Farm implements, Agric PPEs, Rice, Oil, Sugar and Flour. <a href="services.html" style="color: yellow; text-decoration: underline;">Read more</a>
+                            Importation of Agro-chemicals, Tractors, Farm implements, Agric PPEs, Rice, Oil, Sugar and Flour. <a href="services.html" style="color: blue; text-decoration: underline;">Read more</a>
                         </div>
                     </div>
                 </div>
@@ -203,7 +203,7 @@
                         </div>
 
                         <div class="caption full-width">
-                            The export of traditional and non-traditional export products Traditional: Pineapples, <a href="services.html" style="color: yellow; text-decoration: underline;">Read more</a>
+                            The export of traditional and non-traditional export products Traditional: Pineapples, <a href="services.html" style="color: blue; text-decoration: underline;">Read more</a>
                         </div>
                     </div>
                 </div>
@@ -492,10 +492,10 @@
         <!--End of footer-->
 
         <!--Callout-->
-        <div class="callout" style="position: relative; color: white; font-size: 0.9rem; background-color: var(--primary); min-height; 7vh;">
+        <div class="callout" style="position: relative; color: var(--dark); font-size: 0.9rem; background-color: var(--secondary); min-height; 7vh;">
             <div class="brand">
                 <div class="content" style="text-align: center; font-size: 0.9rem; font-weight: normal;">
-                    <font color="white">&copy; Copyright 2020</font>
+                    <font color="#2b2b2b">&copy; Copyright 2020</font>
                 </div>
             </div>
 
