--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="showcase full-width background-presets">
             <div class="navigation">
                 <ul id="links">
-                    <li class="active"><a href="#" target="_blank">Home</a></li>
+                    <li class="active"><a href="#" target="_blank" style="color: var(--dark);">Home</a></li>
                     <li><a href="about.html" target="_blank">About</a></li>
                     <li><a href="services.html" target="_blank">Services</a></li>
                     <li><a href="Blog/blogpage.php" target="_blank">Blog</a></li>
@@ -492,10 +492,10 @@
         <!--End of footer-->
 
         <!--Callout-->
-        <div class="callout" style="position: relative; color: var(--dark); font-size: 0.9rem; background-color: var(--secondary); min-height; 7vh;">
+        <div class="callout" style="position: relative; color: var(--light); font-size: 0.9rem; background-color: var(--dark); min-height; 7vh;">
             <div class="brand">
                 <div class="content" style="text-align: center; font-size: 0.9rem; font-weight: normal;">
-                    <font color="#2b2b2b">&copy; Copyright 2020</font>
+                    <font color="white">&copy; Copyright 2020</font>
                 </div>
             </div>
 
