--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </div>
 
             <div class="button flex flex-center">
-                <a href="#">Ask a Question</a>
+                <a href="#contact" class="ask-btn" style="transition: 0.3;">CONTACT US</a>
             </div>
         </div>
         <!--End of callout-->
@@ -219,7 +219,7 @@
                         </div>
 
                         <div class="caption full-width">
-                            Customer service training, Heavy duty machine operation training, Construction training, <a href="services.html" style="color: yellow; text-decoration: underline;">Read more</a>
+                            Customer service training, Heavy duty machine operation training, Construction training, <a href="services.html" style="color: blue; text-decoration: underline;">Read more</a>
                         </div>
                     </div>
                 </div>
