Colour scheme rework

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                         </div>
 
                         <div class="caption">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore animi, reprehenderit optio labore unde illum. Quos et, autem nulla dicta, voluptates magnam excepturi provident sunt facere reprehenderit est labore dolorum?
+                            To transform the agricultural and industrial sectors of the African economy through strategic investment, research and training.
                         </div>
                     </div>
                 </div>
@@ -129,7 +129,7 @@
                         </div>
 
                         <div class="caption">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore animi, reprehenderit optio labore unde illum. Quos et, autem nulla dicta, voluptates magnam excepturi provident sunt facere reprehenderit est labore dolorum?
+                            To become the largest agro-industrial entity on the African continent and the world at large.
                         </div>
                     </div>
                 </div>
@@ -145,7 +145,11 @@
                         </div>
 
                         <div class="caption">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore animi, reprehenderit optio labore unde illum. Quos et, autem nulla dicta, voluptates magnam excepturi provident sunt facere reprehenderit est labore dolorum?
+                            <ul style="list-style: none;">
+                                <li>One</li>
+                                <li>One</li>
+                                <li>One</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
