Removed target attribute from contact us button

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <p>WE ACHIEVE</p>
                     <p>WE PROVIDE BUSINESS CONSULTATION</p>
                     <div class="button-group">
-                        <a class="learn-more" href="about.html" target="_blank">Learn more</a> <a href="#contact" target="_blank" class="contact-us">Contact Us</a>
+                        <a class="learn-more" href="about.html" target="_blank">Learn more</a> <a href="#contact" class="contact-us">Contact Us</a>
                     </div>
                 </div>
             </div>
