--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
         </div>
         <!--End of callout-->
 
-        <div class="banner full-width">
+        <!--  <div class="banner full-width">
 
-        </div>
+        </div>-->
 
         <div class="showcase full-width background-presets">
             <div class="navigation">
